update search route in backend and frontend

--- a/giftlink-backend/.env
+++ b/giftlink-backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://root:IkFF1HAADfqlIVhxcLFNbMG0@172.21.227.195:27017
+MONGO_URL=mongodb://mongodb-service:27017
 JWT_SECRET=setasecret
